--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -18,8 +18,8 @@
         </ul>
     </nav>
 
-    <div>
-        Start a workout
+    <div class="main-div">
+        
         Look at past workouts
         Update Routines
         Update Custom Exercises
