finished login feature

--- a/views/analytics.ejs
+++ b/views/analytics.ejs
@@ -12,9 +12,7 @@
 
     <div class="main-div">
         
-        Look at past WOKROIUTs
-        Update Routines
-        Update Custom Exercises
+        analytics
     </div>
 
     <script>
