--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,8 +2,8 @@
     <nav>
         <ul>
             <li id="home"><a href="/home">Home</a></li>
-            <li id="workout"><a href="/workouts">Workouts</a></li>
-            <li id="analytic"><a href="/analytics">Analytics</a></li>
-            <li id="user"><a href="/user">Login / Sign Up</a></li>
+            <li id="workouts"><a href="/workouts">Workouts</a></li>
+            <li id="analytics"><a href="/analytics">Analytics</a></li>
+            <li id="user"><a href="/user">Login / Sign Up / Logout</a></li>
         </ul>
     </nav>
