--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,9 +26,11 @@
 
                     <label class="modal-label">Workout Name:</label>
                     <input type="text" placeholder="Enter Workout Name" name="workoutName">
-                    <label class="modal-label" id="timer">Time: 0s</label>
-                    <button type="button" id="startTimer" class="add-button">Start / Stop Timer</button>
-                    <label class="modal-label" id="total">Total Weight Lifted</label>
+                    <!-- <label class="modal-label" id="timer">Time: 0s</label> -->
+                    <div id="stopwatch"></div>
+                    <input type="text" id="duration" class="hiddenInput" name="duration">
+                    <!-- <button type="button" id="startTimer" class="stopwatch">Start / Stop Timer</button> -->
+                    <!-- <label class="modal-label" id="total">Total Weight Lifted</label> -->
 
                     <div id="exercises">
                         <h3>Exercises</h3>
