--- a/views/analytics.ejs
+++ b/views/analytics.ejs
@@ -11,11 +11,11 @@
     <%- include ('navbar.ejs') -%>
 
     <div class="main-div">
-        analytics
+        Coming Soon!
     </div>
 
     <script>
-            document.getElementById("analytics").style.backgroundColor = "#92C4EE";
+            document.getElementById("analytics").style.backgroundColor = "#D3D3D3";
     </script>
 </body>
 </html>
