--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
     <div class="main-div">
         <% if (user) { %>
-            <h2> Welcome Back <%= user.fullname %> !</h1>
+            <h2> Welcome Back <%= user.fullname %>!</h1>
         <% } %>
 
         <button id="startWorkout">Start Workout</button>
@@ -65,8 +65,8 @@
                         <h3>Lifts</h3>
                         <div id="liftGoal-BP">
                             <label>Bench Press</label>
-                            <input type="text" placeholder="Current PR" name="currentBP">
-                            <input type="text" placeholder="Desired PR" name="desiredBP">
+                            <input type="text" placeholder="Current PR" name="currentBench Press">
+                            <input type="text" placeholder="Desired PR" name="desiredBench Press">
                             <input type="hidden" name="hidden-BP" value="Lift">
                         </div>
 
