--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -19,7 +19,7 @@
     </div>
 
     <script>
-            document.getElementById("user").style.backgroundColor = "#92C4EE";
+            document.getElementById("user").style.backgroundColor = "#D3D3D3";
     </script>
 </body>
 </html>
