--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,8 +1,14 @@
-<h1 class="main-header">Workout Tracker</h1>
-    <nav>
+<nav class="nav-menu">
+    <h1 class="main-header">Wacker</h1>
+    <div class="nav-left">
         <ul>
             <li id="home"><a href="/home">Home</a></li>
             <li id="workouts"><a href="/workouts">Workouts</a></li>
+        </ul>
+    </div>
+
+    <div class="nav-right">
+        <ul>
             <li id="analytics"><a href="/analytics">Analytics</a></li>
             <li id="user">
                 <a href="/user">
@@ -10,4 +16,5 @@
                 </a>
             </li>
         </ul>
-    </nav>
+    </div>
+</nav>
