--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body {
     /* background-color: #F6E3D4; */
-    background-color: #F9D199;
+    /* background-color: #F9D199; */
     margin: 0;
     font-family: proxima-nova,arial,helvetica;
     overflow-y: auto;
@@ -51,7 +51,6 @@ nav ul li {
     text-align: center;
     float: left;
 }
-
   
 /* Style the links inside the navigation bar */
 nav a {
@@ -65,6 +64,20 @@ nav a {
 nav ul li:hover {
     background-color: #D3D3D3;
     color: black;
+    -webkit-transition: .3s ease-in-out;
+    -o-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+h2 {
+    font-size: 100px;
+    font-weight: 100;
+    text-align: center;
+}
+
+h3 {
+    color: #0c0c0c;
+    font-weight: bold;
 }
 
 .main-div {
@@ -74,7 +87,7 @@ nav ul li:hover {
     height: 100%;
     overflow-y: auto;
     background: linear-gradient(to bottom right, #283048, #859398);
-
+    padding: 20px;
     /* background: linear-gradient(to bottom right, #696969, #000000); */
     /* background: linear-gradient(to bottom right, #004e92, #000428); */
     /*
@@ -218,11 +231,40 @@ nav ul li:hover {
     background-color: navy;
     float: left;
 }
+*/
 
 .styledBtn {
-    width: 50px;
-    height: 20px;
-} */
+    font-size: 13px;
+    display: inline-block;
+    margin: 0 auto;
+    padding: 13px 35px;
+    border-radius: 100px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 21px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid #ff0026;
+    color: #ff0026;
+    -webkit-transition: .4s ease-in-out;
+    -o-transition: .4s ease-in-out;
+    transition: .4s ease-in-out;
+    left: 50%;
+
+}
+
+.styledBtn:hover {
+    background-color: #ff0026;
+    color: white;
+}
+
+.home-divider {
+    left: 200px;
+    /* -ms-transform: translate(-50%);
+    transform: translate(-50%); */
+}
 
 
 
