--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     overflow-y: auto;
+    height: 100%;
 }
 
 .main-header {
@@ -68,6 +69,7 @@ nav ul li:hover {
     height: 100%;
     overflow-y: auto;
     padding: 20px;
+    height: 100%;
 } 
 
 .workout-div {
@@ -173,4 +175,24 @@ nav ul li:hover {
 
 .hiddenInput {
     display: none;
+}
+
+.goalList {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.goalListItem {
+    border: 1px solid #ddd; /* Add a thin border to each list item */
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6; /* Add a grey background color */
+    padding: 4px; /* Add some padding */
+    opacity: 0.6;
+    transition: 0.3s;
+    width: 50%
+}
+
+.goalListItem:hover {
+    opacity: 1;
 }
