--- a/views/home.ejs
+++ b/views/home.ejs
@@ -83,9 +83,15 @@
             <h2>Here are your current goals!</h2>
             <div id="general-goalsdisplay">
                 <h3>General Goals:</h4>
+                <ul id="general-goalslist" class="goalList">
+
+                </ul>
             </div>
             <div id="lift-goalsdisplay">
                 <h3>Lift Goals:</h4>
+                <ul id="lift-goalslist" class="goalList">
+
+                </ul>
             </div>
         </div>
     </div>
@@ -96,17 +102,20 @@
     </script>
     <script>
 
-        var genDisplayDiv = document.getElementById("general-goalsdisplay");
-        var liftDisplayDiv = document.getElementById("lift-goalsdisplay");
+        var genList = document.getElementById("general-goalslist");
+        var liftList = document.getElementById("lift-goalslist");
 
         "<%userGoals.forEach(function(goal) {%>"
-            var pGoal = document.createElement("p")
+            var listItem = document.createElement("li");
+            var pGoal = document.createElement("p");
             pGoal.innerHTML = "<%-goal.name%>" + " - Start: " + "<%-goal.start%>" + " Goal: " + "<%-goal.goal%>" 
             pGoal.style.marginLeft = "25px";
+            listItem.appendChild(pGoal);
+            listItem.className = "goalListItem";
             if ("<%-goal.type%>" == "General") {
-                genDisplayDiv.appendChild(pGoal);
+                genList.appendChild(listItem);
             } else {
-                liftDisplayDiv.appendChild(pGoal);
+                liftList.appendChild(listItem);
             }
         "<%});%>"
             
