--- a/public/styles.css
+++ b/public/styles.css
@@ -82,6 +82,14 @@ h3 {
     font-weight: bold;
 }
 
+.goal-progress {
+    font-size: 40px;
+    font-weight: 100;
+    text-align: center;
+    color: white;
+    margin-top: 20px;
+}
+
 .main-div {
     top: 70px;
     position: fixed;
@@ -123,7 +131,6 @@ h3 {
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -429,6 +436,7 @@ h4 {
     cursor: pointer;
     font-size: 18px;
     transition-duration: 0.25s;
+    margin-left: 0%;
 }
 
 .login-btn:hover {
@@ -538,6 +546,79 @@ h4 {
 		}
 	}
 } */
+
+.goal-collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 8px;
+    width: 70%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .goal-collapsible:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .goal-collapsiblecontent {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+    width: 70%;
+  }
+
+
+  .progress-collapsible {
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    width: 60%;
+    text-align: left;
+    font-size: 15px;
+    border: 1px solid;
+    outline: none;
+  }
+
+  .progress-collapsible:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+
+  .progress-collapsiblecontent {
+
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: grey;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .progress-gengoals {
+      flex-direction:column;
+      justify-content: center;
+  }
+
+  .inner-meter {
+      background-color:red;
+      height: 20px;
+  }
 
 @-webkit-keyframes square {
   0%   { transform: translateY(0); }
