--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,7 +49,8 @@
             <li></li>
             <li></li>
         </ul> -->
-    </div>
+            <p >Need an account? <a href="/user/signup">Signup</a></p>
+        </div>
     </div>
 
     <script>
