--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -11,11 +11,15 @@
     <%- include ('navbar.ejs') -%>
 
     <div class='main-div'>
-        <h2>Goodbye!</h2>
-        <p> Log out of account </p>
-    
-        <a href="/user/logout">Logout</a>
-        
+        <div class="container">
+            <h2>Goodbye!</h2>
+
+            <p style="margin-top:100px"> Log out of account </p>
+
+            <form class="login-form" action="/user/logout">
+                <button class="login-btn" type="submit">Logout</button>
+            </form>
+        </div>
     </div>
 
     <script>
